# alph

./: .gitignore  .snyk  LICENSE  README.md  dev_requirements.txt  examples.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
alph/: __init__.py  __version__.py  combo.py  core.py  layers.py  layout.py  util.py
examples/: 1_minimal.ipynb  2_customised.ipynb  2_styling.ipynb  3_layouts.ipynb  3_layouts_gallery.ipynb  4_combo_experimental.ipynb  4_dolphins.ipynb  5_airports.ipynb  5_dolphins.ipynb  5_flight_routes.ipynb  6_experimental_combo_layout.ipynb  6_les_mis_experimental_combo.ipynb  7_selection.ipynb  airports.ipynb  dolphins.ipynb  examples.ipynb  force_atlas.ipynb  layouts.ipynb
examples/data/: dolphins.gml
gralt/: combo.py  core.py  layout.py  preproc.py
tests/: test_combo.py  test_preproc.py  test_util.py
