[tool.poetry]
name = "alph"
version = "0.4.6"
description = "alph"
authors = ["Uros Rapajic"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/connectedcompany/alph"
repository = "https://github.com/connectedcompany/alph"

[tool.poetry.dependencies]
altair = ">=4.1.0"
jsonschema = "<4.17"        # TEMPORARY - only required for altair < 5, due to https://github.com/altair-viz/altair/issues/2705
networkx = ">=2.6.3"
pandas = ">=1.3.5"
pygraphviz = { version = ">=1.10", optional = true }
python = "^3.9"
scikit-network = ">=0.27.1"
# also forceatlas2 with cython via fa2 = { git = "https://github.com/connectedcompany/forceatlas2.git" }  

[tool.poetry.extras]
graphviz = ["pygraphviz"]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1" # code formatting
Faker = "^22.0.0"  # generate fake data for examples
# jupyterlab = ">=4"  # used to render github-friendly altair mime renders; <v4 fails looking for Vega 5 renderer
nbmake = "^1.4.6"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
